k8s/job-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-backend
  namespace: jobmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-backend
  template:
    metadata:
      labels:
        app: job-backend
    spec:
      containers:
        - name: job-container
          image: job-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
