k8s/job-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-frontend
  namespace: jobmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-frontend
  template:
    metadata:
      labels:
        app: job-frontend
    spec:
      containers:
        - name: frontend-container
          image: job-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
