k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-offer
  namespace: jobmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-offer
  template:
    metadata:
      labels:
        app: db-offer
    spec:
      containers:
        - name: db-container
          image: mysql:8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
